--- a/templates/layout.html
+++ b/templates/layout.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>fastcups</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
-    <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', path='/styles.css') }}">
+    <link rel="shortcut icon" href="{{ url_for('static', path='/favicon.ico') }}">
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@fastdotai" />
     <meta name="twitter:creator" content="@jeremyphoward" />
-    <meta name="twitter:image" content="{{ url_for("static", filename="cups.jpg", _external=True, _scheme="https") }}" />
+    <meta name="twitter:image" content="{{ url_for("static", path="cups.jpg") }}" />
     <meta property="og:url" content="https://cups.fast.ai/" />
     <meta property="og:title" content="Fastcups - stay in sync with your students" />
     <meta property="og:description" content="Making sure your students are able to follow along as you teach is important - fastcups can help!" />
-    <meta property="og:image" content="{{ url_for("static", filename="cups.jpg", _external=True, _scheme="https") }}" />
+    <meta property="og:image" content="{{ url_for("static", path="cups.jpg") }}" />
   </head>
   <body>
     {% block body %}
