cookie set, template fixes

--- a/templates/howto.html
+++ b/templates/howto.html
@@ -4,9 +4,9 @@
 <div class="main">
   <p><strong>Fastcups</strong> allows you to stay in sync with your students while you teach.</p>
   <p><strong>Usage instructions:</strong><br><br>
-    1. Come up with a name for your class. For the purposes of this example we will go with 'stargazing_101'.<br>
-    2. Open <code>{{ url }}/stargazing_101/teacher</code> in your browser.<br>
-    3. Send your students to <code>{{ url }}/stargazing_101</code> and ask them to let you know how they are doing while the class is in progress.<br>
+    1. Come up with a name for your class. For the purposes of this example we will go with 'biology-101'.<br>
+    2. Open <code>{{ url }}biology-101/teacher</code> in your browser.<br>
+    3. Send your students to <code>{{ url }}biology-101</code> and ask them to let you know how they are doing while the class is in progress.<br>
     4. Keep the tab with the teacher interface open while you teach and glance at it periodically.
   </p>
   <p>Note: If you are reusing your class name (a valid strategy) DO ask your students to go to the provided URL (or reload an already open page) at the start of each class! This will ensure they are properly registered on the system.</p>
