--- a/templates/student.html
+++ b/templates/student.html
@@ -19,43 +19,41 @@
   </p>
 </div>
 
-<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/umbrellajs"></script>
-<script src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js" integrity="sha256-0H3Nuz3aug3afVbUlsu12Puxva3CP4EhJtPExqs54Vg=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.6.1/socket.io.min.js" integrity="sha512-AI5A3zIoeRSEEX9z3Vyir8NqSMC1pY7r5h2cE+9J6FLsoEmSSGLFaqMQw8SWvoONXogkfFrkQiJfLeHLz3+HOg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script>
   document.addEventListener("DOMContentLoaded", function() {
-    var socket = io();
-    var path = u("path");
-    var timestamp = parseFloat(u("#timestamp").html());
-    var class_id = u("#class_id").html();
-
+    let socket = io();
+    let path = document.querySelector("path");
+    let timestamp = parseFloat(document.getElementById("timestamp").innerHTML);
+    let class_id = document.getElementById("class_id").innerHTML;
+    
+    function getCookie(name) {
+      let value = `; ${document.cookie}`;
+      let parts = value.split(`; ${name}=`);
+      if (parts.length === 2) return parts.pop().split(';').shift();
+    }
+    
     socket.on('connect', function() {
-      // we are using the SID to track connected students
-      // SID is only available AFTER js loads, hence this call
-      // (othwerise, we could store the SID for tracking connections
-      // directly in student_interface on the server)
       socket.emit('register_student', timestamp, class_id);
-
-      // to handle server restarts / reconnections
-      path.attr('class', 'inactive');
+      path.setAttribute('class', 'inactive');
     });
 
     socket.on('deactivate_old_tabs', function(data) {
       if (timestamp < data['timestamp']) {
-        if (Cookies.get('student_id') == data['student_id']) {
-          u('body').html('<h1>This tab is no longer active. Please close it or reload the page to reactivate it.</h1>')
-        socket.disconnect();
+        if (getCookie("student_id") == data['student_id']) {
+          document.querySelector("body").innerHTML = '<h1>This tab is no longer active. Please close it or reload the page to reactivate it.</h1>'
+          socket.disconnect();
         }
       }
     });
 
-    u("p").on("click", function() {
-      var new_color = this.className;
-      path.attr('class', '');
-      path.addClass(new_color);
+    Array.from(document.getElementsByTagName("p")).forEach(e => e.addEventListener("click",  function() {
+      let new_color = this.className;
+      path.setAttribute('class', '');
+      path.classList.add(new_color);
       socket.emit('color_change', new_color);
-    });
+    }))
   });
 </script>
 {% endblock %}
